# airwriting

./: README.md  RESEARCH.md  UDP_COMMUNICATION.md  crash_log.txt  demo_scenario.md  deployment_guide.md  drift_report.txt  drift_report2.txt  ip_adapters.txt  main.py  manage.py  relay.txt  requirements.txt  spy.py  start_all.bat  test_config.py  test_results.txt  test_results2.txt  test_results3.txt  test_results4.txt  test_v21.txt  test_v21_final.txt  test_v22.txt  test_v22_full.txt  test_v23.txt  udp_sniff.py  ws_test.py
.agent/skills/python-airwriting-review/: SKILL.md
airwriting-advanced/: config.yaml  pyproject.toml  requirements-advanced.txt  requirements-dev.txt  requirements.txt  setup.sh
airwriting-advanced/data/samples/: sample.csv
airwriting-advanced/docs/: algorithm.md  references.md  uwb_fusion.md
airwriting-advanced/runs/test/: replay_20260108_032611.csv
airwriting-advanced/scripts/: calibrate_bias.py  dev_replay.sh  dev_run.sh
airwriting-advanced/src/airwriting/: __init__.py  config.py  quaternion.py
airwriting-advanced/src/airwriting/app/: __init__.py
airwriting-advanced/src/airwriting/filters/: __init__.py
airwriting-advanced/src/airwriting/kinematics/: __init__.py
airwriting-advanced/src/airwriting/sensors/: __init__.py
airwriting-advanced/src/airwriting/utils/: __init__.py
airwriting-advanced/src/airwriting_advanced/: config.py  quaternion.py
airwriting-advanced/src/airwriting_advanced/app/: benchmark.py  replay_csv.py  run_live.py  run_offline.py  visualize_pygame.py
airwriting-advanced/src/airwriting_advanced/filters/: madgwick.py  mahony.py  vqf_wrapper.py
airwriting-advanced/src/airwriting_advanced/kinematics/: chain_fk.py  constraints.py  plane.py  stroke.py
airwriting-advanced/src/airwriting_advanced/sensors/: csv_reader.py  icm20948_i2c.py  imu_base.py  linux_i2c.py  mpu6050_i2c.py  mpu9250_i2c.py  uwb_serial.py
airwriting-advanced/src/airwriting_advanced/utils/: axis.py  logger.py
airwriting_imu/: __init__.py
airwriting_imu/constraints/: __init__.py  biomechanical.py  drift_observer.py  loop_closure.py  writing_plane.py
airwriting_imu/core/: __init__.py  config_loader.py  controller.py
airwriting_imu/filters/: __init__.py  one_euro.py
airwriting_imu/fusion/: __init__.py  forward_kinematics.py  imu_only_fusion.py  madgwick.py  multi_rate.py
airwriting_imu/ml/: neural_zupt.py  trajectory_recognition.py  velocity_regression.py
config/: imu.yaml  system.yaml
data/: airwriting_dataset.csv
data/zupt_training/: meta.json  y.npy
firmware/: AirWriting_ESP32_draft.md
firmware/airwriting_esp32_v2/: airwriting_esp32_v2.ino
firmware/airwriting_esp32_v3/: airwriting_esp32_v3.ino
models/: zupt_net.pt
tests/: test_constraints.py  test_eskf.py  test_forward_kinematics.py  test_integration.py  test_neural_zupt.py  test_v22_ideas.py  test_v23_ideas.py  test_zupt.py
tools/: calibrate.py  digital_twin.py  generate_zupt_data.py  health_check.py  ml_engine.py  mock_esp32_imu.py  orchestrator.py  train_zupt.py  verify_drift.py  web_relay.py
unity_integration/: Unity_Setup_Guide.md
unity_integration/Scripts/: AirWritingData.cs  AirWritingReceiver.cs  ArmController.cs
web_app/: app.js  app.py  index.html  style.css
