[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "airwriting-advanced"
version = "1.0.0"
description = "Advanced 3-IMU AirWriting with modern sensor fusion, neural networks, and graph optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AirWriting Team", email = "dev@airwriting.io"}
]
keywords = [
    "IMU", "sensor fusion", "handwriting", "VQF", "EKF", 
    "neural networks", "SLAM", "motion capture", "ubuntu"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "smbus2>=0.4.3",
    "pyserial>=3.5",
]

[project.optional-dependencies]
# 고급 기능
neural = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
slam = [
    "gtsam>=4.6.0",
]
advanced = [
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "tensorboard>=2.13.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
]
# 개발 도구
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "sphinx>=7.0.0",
]
# VQF (선택사항)
vqf = [
    "vqf>=2.0.1",
]
# 모든 기능
all = [
    "airwriting-advanced[neural,slam,advanced,dev,vqf]",
]

[project.urls]
Homepage = "https://github.com/airwriting/advanced"
Documentation = "https://airwriting.readthedocs.io"
Repository = "https://github.com/airwriting/advanced.git"
"Bug Tracker" = "https://github.com/airwriting/advanced/issues"

[project.scripts]
airwriting-live = "airwriting_advanced.app.run_live:main"
airwriting-offline = "airwriting_advanced.app.run_offline:main"
airwriting-benchmark = "airwriting_advanced.app.benchmark:main"
airwriting-calibrate = "scripts.calibrate_imu:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["airwriting_advanced"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["airwriting_advanced*"]

[tool.setuptools.package-data]
airwriting_advanced = [
    "config/*.yaml",
    "data/**/*",
]

# pytest 설정
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/airwriting_advanced",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "unit: 단위 테스트",
    "integration: 통합 테스트",
    "slow: 느린 테스트",
    "hardware: 하드웨어 필요",
]

# Black 설정
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 디렉토리
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort 설정
[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true

# mypy 설정
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "vqf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gtsam.*"
ignore_missing_imports = true

# Coverage 설정
[tool.coverage.run]
source = ["src/airwriting_advanced"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
